<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Attack Wing Dial</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dial_sel">Attack Wing Dial</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dial_new_ship">Attack Wing Dial</string>
    <string name="dial">Dial</string>
    <string name="edit">Edit</string>
    <string name="newdial">New Dial</string>
    <string name="scandial">New Dial</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="random">Random</string>
    <string name="ship_name">Name of the ship:</string>
    <string name="crud_dial">CRUD Dial</string>
    <string name="undo">Undo</string>
    <string name="undobar_sample_message">Action performed.</string>
    <string name="maximum">Maximum number of dials is 21</string>
    
</resources>
