<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        >

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="#ffffff" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1">

        <ImageView
            android:id="@+id/movwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/color_white" />

        <ImageView
            android:id="@+id/movred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtnmumber"
            android:layout_alignLeft="@+id/movwhite"
            android:src="@drawable/color_red" />

        <ImageView
            android:id="@+id/movgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtnmumber"
            android:layout_alignLeft="@+id/movwhite"
            android:src="@drawable/color_green" />

        <ImageView
            android:id="@+id/movl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imgdial"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/mov_left"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/movs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/mov_swing"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/movr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/mov_right"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/movhr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/mov_half_right"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/movb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/mov_backward"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/movf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/mov_forward"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/movhl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movl"
            android:layout_alignTop="@+id/movl"
            android:src="@drawable/mov_half_left"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtnmumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movwhite"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="1"
            android:textColor="#FFFFFF"
            android:textSize="32dp"
            android:textStyle="bold" >
        </TextView>

        <ImageView
            android:id="@+id/dialtap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/dialtap" />

        <ImageView
            android:id="@+id/imgdial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/dial" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        style="@style/botonera"
        >

        <ImageButton
            android:id="@+id/btnback"
            android:contentDescription="@string/left"
            android:onClick="back"
            android:src="@drawable/arrow_left" 
            style="@style/boton"/>

        <ImageButton
            android:id="@+id/btnrandom"
            android:contentDescription="@string/random"
            android:onClick="lanzar"
            android:src="@drawable/arrow_random" 
            style="@style/boton"
        />

        <ImageButton
            android:id="@+id/btnnext"
            android:contentDescription="@string/right"
            android:onClick="next"
            android:src="@drawable/arrow_right" 
            style="@style/boton"
        />

        <ImageButton
	        android:id="@+id/btnTap"
	        android:onClick="changetap"
	        android:src="@drawable/scanoff"
	        android:contentDescription="@string/scandial"
	        style="@style/boton"
	     />
	</LinearLayout>        
</LinearLayout>